# AI_Trading_Calls_Pridictor

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.daily-logs/: last_update.json
.github/workflows/: ci-cd.yml
apps/api-gateway/src/: main.py
apps/web/: index.html
apps/web/css/: base.css  components.css  pages.css
apps/web/js/: app.js
apps/web/pages/: backtests.html  settings.html  signals.html  watchlist.html
docs/: api-contracts.md  architecture.md
infra/docker/: Dockerfile.api-gateway  docker-compose.yml
infra/docker/init-scripts/clickhouse/: 01_init.sql
infra/docker/init-scripts/postgres/: 01_init.sql
infra/kubernetes/: deployment.yaml
infra/observability/: prometheus.yml
libs/common/: __init__.py
libs/common/src/: __init__.py  config.py  errors.py  schemas.py  utils.py
libs/groww-client/: __init__.py
libs/groww-client/src/: __init__.py  client.py  feed.py  historical.py  instruments.py  live_data.py
libs/indicators/: __init__.py
libs/indicators/src/: __init__.py  momentum.py  trend.py  volatility.py  volume.py
libs/risk/: __init__.py
libs/risk/src/: __init__.py  drawdown.py  exposure.py  position_sizing.py  risk_metrics.py
scripts/: run_all.py
services/audit-service/src/: main.py
services/backtest-service/src/: __init__.py  main.py
services/bar-aggregator/src/: __init__.py  main.py
services/feature-service/src/: __init__.py  main.py
services/feature-store/src/: __init__.py  main.py
services/instrument-service/src/: __init__.py  main.py
services/market-ingestor/src/: __init__.py  main.py
services/market-store/src/: __init__.py  main.py
services/model-training/src/: __init__.py  main.py
services/multi-broker/src/: __init__.py  main.py
services/notification-service/src/: main.py
services/nse-data/src/: __init__.py  main.py
services/options-service/src/: __init__.py  main.py
services/order-service/src/: main.py
services/portfolio-optimizer/src/: __init__.py  main.py
services/portfolio-service/src/: main.py
services/rl-trading/src/: __init__.py  main.py
services/safety-guards/src/: __init__.py  main.py
services/sentiment-service/src/: main.py
services/signal-service/src/: __init__.py  main.py
